tests/error/10.desc
Compilation error - invalid read rule